--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@vechaiui/core": "^0.6.0",
     "@vechaiui/react": "^0.2.1",
+    "ace-builds": "^1.4.13",
     "antd": "^4.18.5",
+    "brace": "^0.11.1",
     "react": "^17.0.2",
+    "react-ace": "^9.4.4",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
