--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vechaiui/react": "^0.2.1",
     "ace-builds": "^1.4.13",
     "antd": "^4.18.5",
+    "axios": "^0.25.0",
     "brace": "^0.11.1",
     "react": "^17.0.2",
     "react-ace": "^9.4.4",
